<?xml version="1.0"?>
<package>
    <name>atar</name>
    <version>0.0.0</version>
    <description>Assisted Teleoperation with Augmented Reality (ATAR) with da Vinci reasearch kit, including stereo rendering and camera calibration ros nodes.</description>
    <maintainer email="nima@todo.todo">Nima</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rostime</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>opencv2</build_depend>
    <build_depend>active_constraints</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>rostime</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>opencv2</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>active_constraints</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    </export>

</package>


